Fixed Windows builds